@@ -4,6 +4,7 @@ New features:
 ........S. [ZBX-12258] added bulk selections to improve performance in processing of escalations (Sergejs)
 
 Bug fixes:
+..F....... [ZBX-11887] fixed improper DB::refreshIds() call when selected row is locked (miks)
 ..F....... [ZBX-12022] fixed trigger resolving in services configuration; fixed popup window size (miks)
 ..F....... [ZBX-12429] fixed template replacement in mass update form (gcalenko)
 ..F....... [ZBX-12396] fixed an error in screens if screen trigger overview element contains deleted host group (miks)
@@ -467,6 +468,7 @@ Changes for 3.0.11rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-11887] fixed improper DB::refreshIds() call when selected row is locked (miks)
 ..F....... [ZBX-12022] fixed trigger resolving in services configuration; fixed popup window size (miks)
 ..F....... [ZBX-12429] fixed template replacement in mass update form (gcalenko)
 ..F....... [ZBX-12396] fixed an error in screens if screen trigger overview element contains deleted host group (miks)
